css/styles.scss
@import '_utilities';
@import 'roboto/roboto';
@import '_rectangles';

* {
  box-sizing: content-box;
  padding: 0;
  margin: 0;
}

html {
    box-sizing: border-box;
    font-size: inherit;
    overflow-x: hidden;
}

body {
  background-color: white;
  color: $background-color;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  line-height: 1.5;
  font-size: 1.5rem;
  position: relative;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
    font-family: inherit;
    font-weight: 600;
    line-height: 1.5;
    margin-top: 0;
    color: inherit;
}
.h1, h1 {
    font-size: 48px;
}

.space {
  height: $gap;
  display: block;
}

.dspace {
  height: 2 * $gap;
  display: block;
}

.small {
  font-size: 80%;
}

.bg-black {
  background-color: $background-color;
}

.navbar {
  font-size: 80%;
  
  a {
    text-decoration: none;
  }
}

.first-triangle {
  margin-top: $gap * 2;
  background: linear-gradient($background-color 0%, $background-color 30%, white 30%, white 100%);
  
  .logo {
    max-width: 500px;
    width: 100%;
  }

  .triangle {
    padding-bottom: $gap * 4;
  }
}

.sponsors, .team {
  p {
    margin-bottom: 3 * $gap;
  }

  div {
    & + div {
      margin-top: 3 * $gap;
    }

    display: flex;
    align-items: center;
    justify-content: center;
  }

  a {
    @include media('<=tablet') {
      margin-left: $gap;
      margin-right: $gap;
    }

    & + a {
      margin-left: 3 * $gap;

      @include media('<=tablet') {
        margin-left: 0;
      }
    }
    
    &[target] {
      text-decoration: none;
    
      &:hover {
        background-color: inherit;
        color: inherit;
      }
    }
  }

  .row {
    flex-wrap: wrap;
  }

  figcaption {
    max-width: 300px;
    min-width: 100%;
  }
  
  .row a:nth-child(odd) .fancy-border {
    transform: rotate(1deg);
    will-change: transform;
    transition: transform 0.133s ease-in-out;

    &:hover {
      transform: rotate(-1deg);
    }
  }
  .row a:nth-child(even) .fancy-border {
    transform: rotate(-1deg);
    will-change: transform;
    transition: transform 0.133s ease-in-out;

    &:hover {
      transform: rotate(1deg);
    }
  }
}

.sponsor-image, .team-image {
  display: inline-block;
  margin-bottom: $gap;
  max-width: 400px;
  min-width: 300px;
  max-height: 170px;

  &.vector {
    min-width: 400px;
  }

  &.medium {
    max-width: 330px;
    min-width: 280px;
    max-height: 120px;
  }

  &.small {
    max-width: 150px;
    min-width: 130px;
  }
  
  &.square {
    width: 220px;
    height: 220px;
    max-width: inherit;
    min-width: inherit;
    max-height: inherit;
    min-height: inherit;
  }
  
  &.fancy-border {
    padding: 15px;
    background-color: white;
    box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
  }
}

.footer {
  display: flex;
  padding: 0 $gap;
  font-size: 1rem;

  justify-content: space-between;
  align-items: center;
  margin-top: $gap;

  img {
    max-width: 200px;
    width: 100%;
  }

  a {
    text-decoration: none;
  }
}

a {
  color: $background-color;
  text-decoration: underline;
}

.faq {
  .question {
    font-weight: bold;
    margin-top: 30px;
  }
  
  @include media('>tablet') {
      p:nth-child(4n+0), p:nth-child(4n+1) {
        text-align: right;
        padding-left: 30%;
      }
      p:nth-child(4n+2), p:nth-child(4n+3) {
        text-align: left;
        padding-right: 30%;
      }
  }
}

.clock {
  h1 {
    font-size: 4rem;
    margin-bottom: $gap;
  }

  .flip-clock-wrapper {
    display: flex;
    justify-content: center;
    margin-bottom: $gap * 2;

    ul {
      li {
        a {
          div {
            div.inn {
              background-color: $background-color;
              color: $primary-color;
            }
          }
        }
      }
    }
  }

  @include media('<=tablet') {
    .flip-clock-wrapper ul li a div div.inn {
      font-size: 2.5rem;
    }
    .flip-clock-wrapper ul li a div {
      font-size: 3rem;
    }
    .flip-clock-wrapper ul {
      width: 2.4rem;
      height: 3rem;
      font-size: 3rem;
    }

    .flip-clock-wrapper ul li {
      line-height: 3rem;
    }

    /* Adjust the position of the top's dot */
    .flip-clock-dot.top {
      top: 1.2rem;
    }
    /* Adjust the position of the bottom's dot */
    .flip-clock-dot.bottom {
      bottom: 0;
      top: 2.1rem;
    }

    .flip-clock-dot {
      width: .5rem;
      height: .5rem;
    }

    .flip-clock-divider {
      width: 1rem;
      height: 5rem;
    }
    .flip-clock-divider .flip-clock-label {
      right: -4.5rem;
    }

    .flip-clock-divider.minutes .flip-clock-label {
      right: -4.5rem;
    }
    .flip-clock-divider.seconds .flip-clock-label {
      right: -4.1rem;
    }

    padding-bottom: $gap/2;
    padding-left: 0;
    padding-right: 0;

    .flip-clock-wrapper {
      margin: 0;
    }
  }
}

.coc {
  table {
    display: inline-block;
    text-align: left;
  }
}

@include media('>tablet') {
  .content {
    padding: 2 * $gap 15vw;
  }
}

@include media('>=tablet') {
  .navbar-right {
    margin-right: 0;
  }
}

@include media('<tablet') {
  .fact-container {
    flex-wrap: wrap;
  }
}

.fact-container {
  margin-top: $gap * 2;
  margin-bottom: $gap * 2;
  display: flex;
  flex: 1;
  justify-content: center;

  .fact {
    margin-left: $gap;
    margin-right: $gap;

    .desc {
      font-size: 14px;
      white-space: nowrap;
    }

    .value {
      margin-top: -14px;
      font-weight: bold;
      font-size: 60px;
    }
  }
}

// flickr embed
.ug-textpanel-title {
  display: none !important;
}

.eventbrite, .slack-integration {
  margin-top: $gap;
}

#sponsor {
  display: none !important;
}

body {
  .navbar-brand {
    line-height: inherit;
    padding: 0;
    display: inline-flex;
    align-items: center;
    margin-left: 15px;
  }
}

